package org.example.Scheduler.ForwardCheckingUtils;
import org.example.Scheduler.Entity.LocationSWO;

public record Candidate(int dur, int ti, LocationSWO loc)
{

}
