package org.example.Scheduler.Entity.ForwardCheckingUtils;

public record Pair<L,R>(L left, R right) { }
